--- a/Introduction.tex
+++ b/Introduction.tex
@@ -51,7 +51,7 @@ The second result of this thesis is the modelling of the European Rail Traffic M
 \medskip \\
 \textbf{Chapter 4}: Describes an approach using program extraction to obtain a verified SAT solver XSAT.
 \medskip  \\
-\textbf{Chapter 5}: Describes an approach to extract a prototype clause learning SAT algorithm by modifying the DPLL proof system.
+\textbf{Chapter 5}: Describes an approach to extract a prototype conflict driven clause learning SAT algorithm by modifying the DPLL proof system.
 \medskip \\
 \textbf{Chapter 6}: Provides a general introduction to the traditional railway domain.
 \medskip \\
