--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -15,14 +15,12 @@
 \newcommand{\clmodres}[2]{\overset{#1;#2}{\underset{URes}{\vdash}}}
 
 
-\thesischapter{Extracting a Clause Learning SAT Algorithm}{Extracting a Clause Learning SAT Algorithm} \label{chapter:cdclproof}
-In the following chapter we shall describe how a clause learning SAT algorithm can be extracted from a modified DPLL proof system (see chapter \ref{chapter:dpll} in combination with a modified unit resolution proof system. The $\Conflict$ rule is modified such that a clause is learned and stored as part of the sequent. The $\Split$ rule allows for these learned clauses to be transfered up the first branch of the proof tree and then used in the proof search of the next branch. This has the implication that the $\Split$ rule is no longer symmetric and has a more imperative nature. The unit resolution proof system have been modified so that it captures the behaviour of the of the conflict graph (See chapter \ref{chapter:satbackground}.). We define a property which captures a complete\footnote{This is not completeness in the proof theoretic sense but in the sense that the set contains the right number of clauses  and that they come with associated unit resolution proofs} set of unit resolution derived clauses with respect to a valuation such that each resolved clause has a unit resolution derivation from a clause the original formula. The extracted program makes use of these clause during the search for a satisfiying assignment. If this set of clauses becomes empty then the current valuation forms a model of the formula. An occurence of the empty clause in this set of clauses in
-
- Further more, to this end, the valuations used in this proof have a modification to store the rule and level at which a literal has been added. 
+\thesischapter{Extracting a Conflict Driven Clause Learning SAT Algorithm}{Extracting a CDCL SAT Algorithm} \label{chapter:cdclproof}
+In the following chapter we shall describe how a conflict driven clause learning SAT algorithm can be extracted from a modified DPLL proof system (see chapter \ref{chapter:dpll}) in combination with a modified unit resolution proof system. The $\Conflict$ rule is modified such that a clause is learned and stored as part of the sequent. The $\Split$ rule allows for these learned clauses to be transfered up the first branch of the proof tree and then used in the proof search of the next branch. This has the implication that the $\Split$ rule is no longer symmetric and has a more imperative nature. The unit resolution proof system have been modified so that it captures the behaviour of the of the conflict graph (See chapter \ref{chapter:satbackground}.). We define a property which captures a complete\footnote{This is not completeness in the proof theoretic sense but in the sense that the set contains the right number of clauses  and that they come with associated unit resolution proofs} set of unit resolution derived clauses with respect to a valuation such that each resolved clause has a unit resolution derivation from a clause the original formula. The extracted program makes use of these clause during the search for a satisfiying assignment. If this set of clauses becomes empty then the current valuation forms a model of the formula. An occurence of the empty clause in this set of clauses indicates that a conflict has a occured and a clause is learned and passed up the branch of the proof search. In order to facilitate clause learning, the valuations used in this proof have a modification to store the rule and level at which a literal has been added. 
 
 
 \section{Preliminaries}
-The definitions of variables, literals , clauses, formulae and models remain the same as in chapter \ref{chapter:dpll}. In the following we shall present prelimary definitions that subsequently been added or modified: \\
+The definitions of variables, literals, clauses, formulae and models remain the same as in chapter \ref{chapter:dpll}. In the following we shall present prelimary definitions that subsequently been added or modified: \\
 %
 %\hspace{3mm}
 %
@@ -100,9 +98,9 @@ of three rules:
 %
 \begin{center}
 %
-\AxiomC{$\Gamma_2 \subseteq \Gamma, (\mybar{l} \, \delta(\Gamma) \! + \!1)$}
+\AxiomC{$\Gamma_2 \subseteq \Gamma, (S \,\mybar{l} \, \delta(\Gamma) \! + \!1)$}
 \noLine
-\UnaryInfC{$\Gamma_1 \subseteq \Gamma, (l \, \delta(\Gamma) \! + \!1)$}
+\UnaryInfC{$\Gamma_1 \subseteq \Gamma, (S \, l \, \delta(\Gamma) \! + \!1)$}
 \AxiomC{$\Gamma_1 \vdash_{\Delta'} \Delta$}
 \AxiomC{$\Gamma_2   \vdash_{\Delta''} \Delta, \Delta'$}
 \RightLabel{$\Split$}
@@ -121,7 +119,7 @@ of three rules:
 %
 \AxiomC{$\Gamma _1 \vdash_{\Delta'} \Delta$}
 \AxiomC{$\Gamma' \clmodres{\Gamma}{\Delta}\{ l \}$}
-\AxiomC{$\Gamma_1 \subseteq \Gamma, (l \, \delta(\Gamma)) $}
+\AxiomC{$\Gamma_1 \subseteq \Gamma, (U \, l \, \delta(\Gamma)) $}
 \noLine
 \UnaryInfC{$\var{l} \notin \Gamma, \, C_0 \in \Delta$}
 \RightLabel{$\Unit$}
