--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -548,7 +548,8 @@ This case corresponds to the back tracking in our program. We have derived that 
 \end{proof}
 \end{mytheorem}
 %
-We prove the following corollary inorder to perform some preprocessing on the formula and run the main proof.
+We prove the following corollary inorder to perform some preprocessing on the formula and run the main proof. \\
+\medskip
 \begin{mycorollary}
 \begin{align*}
 \forall \Delta. \exists M( M \models \Delta) \vee \exists \Delta'(\emptyset \vdash_{\Delta'} \Delta)
