--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -140,21 +140,19 @@ eq {REST < O1 : Train | speed : N1 >} |= train-s(O1,N1') =
 Here the natural number N1 in the train object is matched with N1' in the predicate train-s. This can be used to that train1 does not exceed its maximum speed in any state in the pentagon  example that is reachable in 30 time steps using the following command:
 
 \begin{center}
-\texttt{(mc initialstate2 |=t  ~(<> train-s(train1,5)) in time <= 30 .)}
+\texttt{(mc initialstate2 |=t  ~(<> train-s(train1,5)) in time <= 100 .)}
 \end{center}
 
-The resulting output from the model checker shows that the property has been proven true in 67 seconds:
+The resulting output from the model checker shows that the property has been proven true in 230 seconds:
 
 \begin{lstlisting}
-rewrites: 41403871 in 67776ms cpu (67773ms real)
-(610892 rewrites/second)
+rewrites: 66202099 in 229900ms cpu (229901ms real) 
+(287960 rewrites/second)
+Model check initialstate2 |=t ~ <> train-s(train1,5)
+in MODEL-CHECK-ERTMS8 in time
+  <= 100 with mode deterministic time increase
 
-Model check initialstate2 |=t ~ <> train-s(train1,5) in 
-MODEL-CHECK-ERTMS8 in time <= 30 with mode
-deterministic time increase
-
-Result Bool :
-  true
+Result Bool : true
 \end{lstlisting}
 
 We will now show that the train is always at the correct speed for the cons and stopped states. This is formulated using two properties. We can check that a train is in a specific state, in this case the cons state, as follows:
@@ -227,9 +225,12 @@ The Maude LTL model checker is then called using the following command:
 \end{center}
 The command states that we are applying timed model checking to check that it is globally true that the movement authorities of the trains do not over lap at all moments in time less than or equal to 100. This results in the following output from Real Time Maude which indicates that the property was succesfully verified in 1 minutes and 32 seconds taking the system approximately 76 million rewrites.
 \begin{lstlisting}[caption = No overlapping movement authorities model checking result]
-rewrites: 76099490 in 91776ms cpu (91776ms real) (829187 rewrites/second)
-Model check initialstate2 |=t[]nomaoverlap1(train1,train2)in MODEL-CHECK-ERTMS8
-    in time <= 100 with mode deterministic time increase
+rewrites: 76099490 in 91776ms cpu (91776ms real) 
+(829187 rewrites/second)
+Model check initialstate2 |=t[]nomaoverlap1(train1,train2)
+in MODEL-CHECK-ERTMS8
+   in time <= 100 with mode deterministic time increase
+
 Result Bool : true
 \end{lstlisting}
 
